# straight-line

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  schema.sql
apps/auth/: Cargo.toml  Dockerfile  project.json
apps/auth/src/: main.rs
apps/auth/src/controllers/: auth_controller.rs
apps/auth/src/middlewares/: jwt_middleware.rs  mod.rs  refresh_middleware.rs
apps/auth/src/services/: auth_service.rs
apps/auth/src/utils/: constants.rs
apps/user/: Cargo.toml  Dockerfile  project.json
apps/user/src/: main.rs
apps/user/src/controllers/: user_controller.rs
apps/user/src/middlewares/: jwt_middleware.rs
apps/user/src/services/: user_service.rs
apps/www/: index.html  tailwind.config.js  tsconfig.spec.json  vite.config.ts
apps/www-e2e/: cypress.config.ts
apps/www/src/: main.tsx
apps/www/src/app/: app.spec.tsx  app.tsx  middleware.tsx
apps/www/src/app/components/icons/: eye-slash.tsx  eye-visible.tsx  index.ts
apps/www/src/app/components/navbar/: index.spec.tsx  index.tsx
apps/www/src/app/hooks/: use-auth.ts
apps/www/src/app/pages/: app-page.spec.tsx  app-page.tsx  index.ts
apps/www/src/app/providers/: auth-provider.tsx
apps/www/src/app/types/: user.ts
libs/database/: Cargo.toml  project.json
libs/database/src/: db.rs  lib.rs  pgx.rs  redis.rs
libs/logger/: Cargo.toml  project.json
libs/logger/src/: lib.rs  log.rs  logger.rs
libs/security/: Cargo.toml  project.json
libs/security/src/: env.rs  hasher.rs  jwt.rs  lib.rs  uuid.rs
nginx/: nginx.conf
(+2 files in other folders)
