[package]
name = "auth"
version = "0.1.0"
edition = "2021"


[dependencies]
mockall = "0.13"
database = { path = "../../libs/database" }
security = { path = "../../libs/security" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
actix-web = "4"
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
