[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
security = { path = "../security" }
mockall = "0.13"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
redis = "0.27"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
